# Clawmark

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: release.yml
desktop/: ship.sh
desktop/Geniuz/: GeniuzApp.swift  GeniuzMenu.swift  GeniuzService.swift
desktop/Geniuz.xcodeproj/: project.pbxproj
desktop/dashboard/: Cargo.toml  tauri.conf.json
desktop/dashboard/capabilities/: default.json
desktop/dashboard/frontend/: index.html  styles.css
desktop/dashboard/frontend/_legacy/: _demo-index.html  dashboard-fresh.html  data.js  index.html  tauri-bridge.js  tooltip.html  tray-popup.html
desktop/dashboard/frontend/src/: api.js  format.js  main.js  md.js  store.js
desktop/dashboard/frontend/src/components/: activityChart.js  folderPanel.js  memoryItem.js  searchBox.js  sidebar.js  statCard.js
desktop/dashboard/frontend/src/surfaces/: data.js  detail.js  find.js  placeholder.js  recent.js  remember.js  settings.js  status.js
desktop/dashboard/icons/: icon.icns
desktop/dashboard/src/: lib.rs  main.rs
examples/: tune-threshold.rs
installer/mac/: VolumeIcon.icns
installer/windows/: Geniuz.iss  README.md  RELEASE-CHECKLIST.md  sign-binaries.sh  sign-installer-trustedsigning.sh  sign-installer.sh
skills/: SKILL.md
src/: adapter.rs  cli.rs  db.rs  embedding.rs  lib.rs  main.rs  mcp.rs  settings.rs  tray.rs  tui.rs
