[package]
name = "geniuz"
version = "1.1.0"
edition = "2021"
description = "Your AI remembers now — persistent memory for AI agents"
license = "MIT"
repository = "https://github.com/jackccrawford/geniuz"
homepage = "https://agentdoor.ai/geniuz"

[lib]
name = "geniuz"
path = "src/lib.rs"

[[bin]]
name = "geniuz"
path = "src/main.rs"

[[bin]]
name = "geniuz-embed"
path = "src/embed_server.rs"

[[bin]]
name = "geniuz-tray"
path = "src/tray.rs"
required-features = ["tray"]

[features]
default = []
tray = ["dep:eframe", "dep:egui", "dep:tray-icon", "dep:image", "dep:winit"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"

# Embedding: built-in ONNX inference for semantic search
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "api-17", "download-binaries", "copy-dylibs", "tls-native"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ureq = { version = "3", features = ["json"] }
interprocess = "2"

# Tray + GUI — feature-gated, Windows/Mac only; Linux builds skip
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"], optional = true }
egui = { version = "0.29", optional = true }
tray-icon = { version = "0.19", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
winit = { version = "0.30", optional = true }
