[package]
name = "geniuz-dashboard"
version = "2.0.0"
edition = "2021"
description = "Geniuz dashboard — native Tauri app for Windows + Mac"
license = "MIT"
authors = ["Jack C Crawford <jcc@managedv.com>"]

[lib]
name = "geniuz_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "geniuz-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Canonical data layer. The dashboard goes through geniuz's public API; it
# does NOT open memory.db directly. One source of truth for schema and query
# logic, used by CLI, MCP server, and dashboard alike.
geniuz = { path = "../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
