[package]
name = "geniuz-dashboard"
version = "2.0.2"
edition = "2021"
description = "Geniuz dashboard — native Tauri app for Windows + Mac"
license = "MIT"
authors = ["Jack C Crawford <jcc@managedv.com>"]

[lib]
name = "geniuz_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "geniuz-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NSVisualEffectView (Mac) + Acrylic/Mica (Windows) for native window
# vibrancy. Applied in src/lib.rs setup(). The window is transparent at
# the chassis level (tauri.conf.json `transparent: true`); this crate
# inserts the OS-native blur material at the window root so the dashboard
# sits inside the system aesthetic instead of asserting a solid colour.
window-vibrancy = "0.5"

# Canonical data layer. The dashboard goes through geniuz's public API; it
# does NOT open memory.db directly. One source of truth for schema and query
# logic, used by CLI, MCP server, and dashboard alike.
geniuz = { path = "../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
